--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,6 +14,7 @@
 @import './component/topbar';
 @import './component/load';
 @import './component/form';
+@import './component/recentBlocks';
 
 //pages...
 @import 'containers/account';
