Enforce more strict type checking

--- a/src/scss/component/recentBlocks.scss
+++ b/src/scss/component/recentBlocks.scss
@@ -36,6 +36,10 @@
     flex-direction: 'row';
     align-items: 'center';
     justify-content: 'space-between';
+
+    .downloadBlockOutputButton {
+      font-weight: bold;
+    }
   }
 
   .richardContractTitleArea {
