--- a/src/scss/component/recentBlocks.scss
+++ b/src/scss/component/recentBlocks.scss
@@ -49,14 +49,14 @@
     }
   }
 
-  .blockOutputArea {
+  .blocksOutputArea {
     display: 'flex';
     flex-direction: 'row';
     align-items: 'center';
     justify-content: 'space-between';
 
     .downloadBlockOutputButton {
-      font-weight: bold;
+      cursor: pointer;
     }
   }
 
