Fix integration and unit tests

--- a/src/scss/component/recentBlocks.scss
+++ b/src/scss/component/recentBlocks.scss
@@ -23,6 +23,9 @@
   .recentBlocksRows {
     td.blockId {
       word-break: break-all;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
